# FrameSurfer

./: .gitignore  README.md  main.py  pyproject.toml
framesurfer/: manage.py
framesurfer/framesurfer/: asgi.py  settings.py  urls.py  wsgi.py
framesurfer/surfer/: admin.py  api_utils.py  apps.py  forms.py  models.py  urls.py  views.py
framesurfer/surfer/migrations/: 0001_initial.py  0002_alter_frametv_api_service.py  0003_alter_frametv_topics.py
framesurfer/surfer/templates/: base.html
framesurfer/surfer/templates/surfer/: add_api_service.html  add_tv.html  api_service_list.html  downloaded_photos.html  tv_list.html
framesurfer/surfer/templatetags/: form_filters.py
src/: creds.py  samsung.py  unsplash.py
